[package]
name = "nfa_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clipboard = "0.5.0"
crc32fast = "1.5.0"
eframe = "0.33.3"
serde_json = "1.0.149"
winreg = "0.55.0"
base64 = "0.22.0"
windows = { version = "0.56.0", features = ["Win32_Security_Cryptography", "Win32_System_Registry"] }
egui-material3 = "0.0.9"
